--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SharedTasks</string>
+    <string name="welcome">Welcome to SharedTasks!</string>
 
     <string name="assign_task">Assign me</string>
     <string name="open_drawer_description">List of all your projects</string>
