--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="open_drawer_description">List of all your projects</string>
     <string name="close_drawer_description">Tasks of selected project</string>
     <string name="drawer_opened_title">Select a project</string>
+
+    <string name="edit_task">Edit task</string>
+    <string name="add_task">Add task</string>
+    <string name="task_title_hint">Task\'s name</string>
+    <string name="task_description_hint">Task\'s description</string>
+    <string name="task_high_priority">High priority</string>
+    <string name="task_no_priority">No priority</string>
+    <string name="task_date_empty">Select a date...</string>
 </resources>
