Better distributtion of menus  · MainActivity -> menu with create project action  · ListFragment -> menu with invite people action  · AddEdit -> menu with save

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">SharedTasks</string>
     <string name="welcome">Welcome to SharedTasks!</string>
+    <string name="create_project">Create new project</string>
 
     <string name="assign_task">Assign me</string>
     <string name="open_drawer_description">List of all your projects</string>
