--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
 
     <string name="new_project_hint">New Project name</string>
     <string name="new_project_error_name">Project must have a name</string>
+    <string name="new_project_error_internet">You must have connection to internet to create a project</string>
 
     <string name="tasks_widget_title">Your current tasks</string>
     <string name="appwidget_notification_channel_name">Channel SharedTasks widget</string>
